Setup for Git (remove subwcrev)

--- a/DDay.iCal.Test/DDay.iCal.Test.csproj
+++ b/DDay.iCal.Test/DDay.iCal.Test.csproj
@@ -636,6 +636,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PreBuildEvent>subwcrev.exe $(ProjectDir). $(ProjectDir)Properties\AssemblyInfo.cs.template $(ProjectDir)Properties\AssemblyInfo.cs</PreBuildEvent>
+    <PreBuildEvent>rem subwcrev.exe $(ProjectDir). $(ProjectDir)Properties\AssemblyInfo.cs.template $(ProjectDir)Properties\AssemblyInfo.cs
+copy $(ProjectDir)Properties\AssemblyInfo.cs.template $(ProjectDir)Properties\AssemblyInfo.cs</PreBuildEvent>
   </PropertyGroup>
 </Project>
