--- a/DDay.iCal/DDay.iCal.csproj
+++ b/DDay.iCal/DDay.iCal.csproj
@@ -21,7 +21,7 @@
     <OldToolsVersion>3.5</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <PublishUrl>http://localhost/DDay.iCal/</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Web</InstallFrom>
@@ -78,9 +78,8 @@
     </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="TimeZoneMapper, Version=1.2.7.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\TimeZoneMapper.1.2.7.0\lib\net40-client\TimeZoneMapper.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="TimeZoneMapper">
+      <HintPath>..\packages\TimeZoneMapper.1.2.8.0\lib\net40-client\TimeZoneMapper.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
