--- a/DDay.iCal/Properties/AssemblyInfo.cs.template
+++ b/DDay.iCal/Properties/AssemblyInfo.cs.template
@@ -14,6 +14,7 @@ using System.Security;
 [assembly: AssemblyCopyright("Copyright © 2010 Douglas Day")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
+[assembly: SecurityRules(SecurityRuleSet.Level1)]
 
 // Setting ComVisible to false makes the types in this assembly not visible 
 // to COM components.  If you need to access a type in this assembly from 
